# server/docs/swagger.json
@@ -12,6 +12,30 @@
     "host": "localhost:80",
     "basePath": "/",
     "paths": {
+        "/api/common/about_app": {
+            "get": {
+                "description": "AboutApp",
+                "tags": [
+                    "公共接口"
+                ],
+                "summary": "AboutApp",
+                "operationId": "AboutApp",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/com_model.CommonReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/com_model.CommonReturn"
+                        }
+                    }
+                }
+            }
+        },
         "/api/common/article/get_article": {
             "get": {
                 "description": "获取article",
@@ -191,19 +215,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.IcpInfo"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/com_model.CommonReturn"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.IcpInfo"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/com_model.CommonReturn"
                         }
                     }
                 }
@@ -245,13 +275,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/com_model.CommonReturn"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/com_model.CommonReturn"
                         }
                     }
                 }
